--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -38,6 +38,11 @@
 }
 
 .hightlight {
+  background-image: linear-gradient(213deg, #ecd791, #2fccd2, #6f2ba6, #c87a29);
+  background-repeat: repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
   position: relative;
   &::before {
     content: "";
