--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,11 @@ a {
 
 /****************/
 .blink {
-  animation: crescendo 2s alternate infinite ease-in; }
+  animation: crescendo 2s alternate infinite ease-in;
+  background-image: linear-gradient(213deg, #ecd791, #2fccd2, #6f2ba6, #c87a29);
+  background-repeat: repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; }
 
 @keyframes crescendo {
   0% {
@@ -174,6 +178,10 @@ a {
   margin-bottom: 6rem; }
 
 .hightlight {
+  background-image: linear-gradient(213deg, #ecd791, #2fccd2, #6f2ba6, #c87a29);
+  background-repeat: repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   position: relative; }
   .hightlight::before {
     content: "";
