--- a/css/style.css
+++ b/css/style.css
@@ -162,20 +162,22 @@ a {
       height: 100vh; } }
 
 .main-title {
-  font-size: 6.5rem; }
+  font-size: 6.5rem;
+  letter-spacing: 1.2px; }
   @media only screen and (max-width: 56.25em) {
     .main-title {
       font-size: 3.5rem; } }
   @media only screen and (max-width: 37.5em) {
     .main-title {
-      font-size: 3rem;
+      font-size: 3.3rem;
       padding-top: 3rem; } }
   @media screen and (min-width: 1600px) {
     .main-title {
       padding-top: 6rem; } }
 
 .sub-title {
-  margin-bottom: 6rem; }
+  margin-bottom: 6rem;
+  letter-spacing: 1.5px; }
 
 .hightlight {
   background-image: linear-gradient(213deg, #ecd791, #2fccd2, #6f2ba6, #c87a29);
@@ -183,15 +185,6 @@ a {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   position: relative; }
-  .hightlight::before {
-    content: "";
-    width: 100%;
-    height: 40px;
-    background: linear-gradient(to bottom, var(--white), var(--white-2));
-    position: absolute;
-    bottom: 15px;
-    left: 0;
-    z-index: -1; }
 
 .chi-sono {
   padding-bottom: 3rem;
