--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -21,11 +21,12 @@
 
 .main-title {
   font-size: 6.5rem;
+  letter-spacing: 1.2px;
   @include respond(tab-port) {
     font-size: 3.5rem;
   }
   @include respond(phone) {
-    font-size: 3rem;
+    font-size: 3.3rem;
     padding-top: 3rem;
   }
   @media screen and (min-width: 1600px) {
@@ -35,6 +36,7 @@
 
 .sub-title {
   margin-bottom: 6rem;
+  letter-spacing: 1.5px;
 }
 
 .hightlight {
@@ -44,14 +46,14 @@
   -webkit-text-fill-color: transparent;
 
   position: relative;
-  &::before {
-    content: "";
-    width: 100%;
-    height: 40px;
-    background: linear-gradient(to bottom, var(--white), var(--white-2));
-    position: absolute;
-    bottom: 15px;
-    left: 0;
-    z-index: -1;
-  }
+  // &::before {
+  //   content: "";
+  //   width: 100%;
+  //   height: 40px;
+  //   background: linear-gradient(to bottom, var(--white), var(--white-2));
+  //   position: absolute;
+  //   bottom: 15px;
+  //   left: 0;
+  //   z-index: -1;
+  // }
 }
