--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -37,7 +37,7 @@ html {
   --text: "Inter", sans-serif;
   --title-text: "Syne", sans-serif;
 
-  --white: #f8f8f8;
+  --white: rgb(248, 248, 248);
   --white-2: #e1e1e1;
   --black: #161616;
   --black-hover: #2d2d2d;
