--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,8 +1,17 @@
 .hero {
-  background-color: var(--white);
+  // background-color: var(--white);
+  background-image: linear-gradient(
+      to right,
+      rgba(248, 248, 248, 0.88),
+      rgba(248, 248, 248, 0.66)
+    ),
+    url("../img/milan.jpg");
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
   padding-bottom: 4rem;
-  height: 85vh;
-  clip-path: polygon(100% 0, 100% 70%, 0 100%, 0 100%, 0 0);
+  // height: 85vh;
+  clip-path: polygon(100% 0, 100% 85%, 0 100%, 0 100%, 0 0);
   @include respond(tab-port) {
     height: 65vh;
   }
@@ -10,7 +19,7 @@
     height: 70vh;
   }
   @media screen and (min-width: 1600px) {
-    height: 75vh;
+    height: 100vh;
   }
 
   @media (min-aspect-ratio: 8/5) and (max-width: 840px) {
