added custom scrollbar

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -12,12 +12,12 @@
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888;
+  background: var(--black);
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  background: var(--black-hover);
 }
 
 *,
