--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -27,11 +27,11 @@
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888; }
+  background: var(--black); }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555; }
+  background: var(--black-hover); }
 
 *,
 *::before,
@@ -47,7 +47,7 @@ html {
 :root {
   --text: "Inter", sans-serif;
   --title-text: "Syne", sans-serif;
-  --white: #f8f8f8;
+  --white: rgb(248, 248, 248);
   --white-2: #e1e1e1;
   --black: #161616;
   --black-hover: #2d2d2d;
@@ -88,7 +88,11 @@ a {
 
 /****************/
 .blink {
-  animation: crescendo 2s alternate infinite ease-in; }
+  animation: crescendo 2s alternate infinite ease-in;
+  background-image: linear-gradient(213deg, #ecd791, #2fccd2, #6f2ba6, #c87a29);
+  background-repeat: repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; }
 
 @keyframes crescendo {
   0% {
@@ -139,9 +143,12 @@ a {
   font-family: var(--title-text); }
 
 .hero {
-  background-color: var(--white);
-  height: 85vh;
-  clip-path: polygon(100% 0, 100% 70%, 0 100%, 0 100%, 0 0); }
+  background-image: linear-gradient(to right, rgba(248, 248, 248, 0.88), rgba(248, 248, 248, 0.66)), url("../img/milan.jpg");
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+  padding-bottom: 4rem;
+  clip-path: polygon(100% 0, 100% 85%, 0 100%, 0 100%, 0 0); }
   @media only screen and (max-width: 56.25em) {
     .hero {
       height: 65vh; } }
@@ -150,43 +157,39 @@ a {
       height: 70vh; } }
   @media screen and (min-width: 1600px) {
     .hero {
-      height: 75vh; } }
+      height: 100vh; } }
   @media (min-aspect-ratio: 8 / 5) and (max-width: 840px) {
     .hero {
       clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 100%, 0 0);
       height: 100vh; } }
 
 .main-title {
-  font-size: 6.5rem; }
+  font-size: 6.5rem;
+  letter-spacing: 1.2px; }
   @media only screen and (max-width: 56.25em) {
     .main-title {
       font-size: 3.5rem; } }
   @media only screen and (max-width: 37.5em) {
     .main-title {
-      font-size: 3rem;
+      font-size: 3.3rem;
       padding-top: 3rem; } }
   @media screen and (min-width: 1600px) {
     .main-title {
       padding-top: 6rem; } }
 
 .sub-title {
-  margin-bottom: 60px; }
+  margin-bottom: 6rem;
+  letter-spacing: 1.5px; }
 
 .hightlight {
+  background-image: linear-gradient(213deg, #ecd791, #2fccd2, #6f2ba6, #c87a29);
+  background-repeat: repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   position: relative; }
-  .hightlight::before {
-    content: "";
-    width: 100%;
-    height: 40px;
-    background: linear-gradient(to bottom, var(--white), var(--white-2));
-    position: absolute;
-    bottom: 15px;
-    left: 0;
-    z-index: -1; }
 
 .chi-sono {
-  padding-top: 5rem;
-  padding-bottom: 10rem;
+  padding-bottom: 3rem;
   position: relative; }
   .chi-sono p {
     font-size: 1.4rem; }
@@ -251,7 +254,7 @@ a {
   color: var(--black); }
 
 .portfolio {
-  padding-bottom: 8rem; }
+  padding-bottom: 2rem; }
   .portfolio-btn {
     border: 1px solid var(--black);
     color: inherit;
